<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".DashboardFragment">

    <Button
        android:id="@+id/create_stand_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_stand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/view_stands_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_stands"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_stand_button" />

    <Button
        android:id="@+id/view_nearby_stands_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_nearby_stands"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_stands_button" />

</LinearLayout>
