<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateStandFragment">

    <ScrollView
        android:id="@+id/create_stand"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/create_stand_stand_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/create_stand_stand_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CreateStandNameContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/dark_gray"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_stand_stand_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:background="@android:color/white"
                android:hint="@string/view_stand_name"
                android:inputType="text"
                android:lines="1"
                android:textColor="@color/light_blue"
                android:textSize="16sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/create_stand_location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/create_stand_location" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CreateStandLocationContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/dark_gray"
            android:orientation="vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_stand_latitude"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_gravity="left"
                android:background="@android:color/white"
                android:hint="@string/create_stand_latitude"
                android:inputType="text"
                android:lines="1"
                android:textColor="@color/light_blue"
                android:textSize="14dp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CreateStandLocation2Container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/dark_gray"
            android:orientation="vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_stand_longitude"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_gravity="left"
                android:background="@android:color/white"
                android:hint="@string/create_stand_longitude"
                android:inputType="text"
                android:lines="1"
                android:textColor="@color/light_blue"
                android:textSize="14dp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/create_stand_inventory_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/create_stand_inventory" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CreateStandInventoryContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/dark_gray"
            android:orientation="vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_stand_inventory"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_gravity="left"
                android:background="@android:color/white"
                android:hint="@string/create_stand_inventory_no_star"
                android:inputType="text"
                android:lines="1"
                android:textColor="@color/light_blue"
                android:textSize="14dp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/create_stand_open_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/create_stand_opens" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CreateStandOpensContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/dark_gray"
            android:orientation="vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_stand_opens"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_gravity="left"
                android:background="@android:color/white"
                android:hint="@string/create_stand_opens_format"
                android:inputType="text"
                android:lines="1"
                android:textColor="@color/light_blue"
                android:textSize="14dp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/create_stand_close_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/create_stand_closes" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CreateStandClosesContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/dark_gray"
            android:orientation="vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_stand_closes"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_gravity="left"
                android:background="@android:color/white"
                android:hint="@string/create_stand_closes_format"
                android:inputType="text"
                android:lines="1"
                android:textColor="@color/light_blue"
                android:textSize="14dp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button_createStand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="Submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_stand_image2" />
    </LinearLayout>
    </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>